<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp">


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_shoe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageShoeList"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/header_image_description"
        android:src="@drawable/model_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameShoeList"
        style="@style/textApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/shoe_name_dummy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageShoeList"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameCompanyList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/company_name_dummy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nameShoeList"
        app:layout_constraintTop_toBottomOf="@+id/nameShoeList" />

    <Button
        android:id="@+id/sizeShoeList"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_circle_enabled"
        android:text="@string/nine_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/nameCompanyList" />

</androidx.constraintlayout.widget.ConstraintLayout>