<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.welcome.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHeadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/headImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/header_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/woman_legs_in_casual_shoes_at_wall"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHeadImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineHeadImage"
            style="@style/titleWelcome" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/textWelcomeScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/nextButtonWelcome"
            app:layout_constraintTop_toBottomOf="@+id/titleWelcome">

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/welcome_text"
                style="@style/textApp" />
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/nextButtonWelcome"
            style="@style/buttonApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{() -> welcomeViewModel.goToInstructionStart()}"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.ui.welcome.WelcomeViewModel" />
    </data>
</layout>