<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.instructionDetail.InstructionDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHeadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:padding="100dp"
            android:background="@color/colorComplementTwoPrimary"
            android:id="@+id/headImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/header_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/shoe_detail_opt"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHeadImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleInstruction"
            style="@style/titleWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/Instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineHeadImage" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/textInstructionScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/nextButtonInstruction"
            app:layout_constraintTop_toBottomOf="@+id/titleInstruction">

            <TextView
                style="@style/textApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_margin"
                android:gravity="center"
                android:text="@string/instruction_two_text" />
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/nextButtonInstruction"
            style="@style/buttonApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{() -> instructionDetailViewModel.goToShoeListStart()}"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="instructionDetailViewModel"
            type="com.udacity.shoestore.ui.instructionDetail.InstructionDetailViewModel" />
    </data>
</layout>